--- a/orgcss/styles.css
+++ b/orgcss/styles.css
@@ -39,7 +39,7 @@ body {
 }
 
 #logo-img {
-  background:url('') no-repeat;
+  background-image: url(\images\restaurant-logo.png);
   width: 150px;
   height: 150px;
   margin: 10px 15px 10px 0;
