--- a/orgcss/styles.css
+++ b/orgcss/styles.css
@@ -1,4 +1,4 @@
-/*Global CSS*/
+a/*Global CSS*/
 /*googleoxygenfontapi*/
 .oxygen-light {
     font-family: "Oxygen", sans-serif;
@@ -37,15 +37,42 @@ body {
   border-radius: 0;
   border:rgb(0, 0, 0);
 }
-
+/*why the fuck is this img not loading in css but will with img src*/
 #logo-img {
-  background-image: url(\images\restaurant-logo.png);
+  background-image:image("c:/users/reti/desktop/vsc/mod4staticrest/images/restaurant-logo.png")("c:/users/reti/desktop/vsc/mod4staticrest/images/restaurant-logo.png");
   width: 150px;
   height: 150px;
   margin: 10px 15px 10px 0;
 }
+.navbar-brand {
+  padding-top: 25px;
+}
 
+.navbar-brand h1  {
+    font-family: 'Lora', serif;
+    color: #557c3e;
+    font-size: 1.5em;
+    text-transform:uppercase;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #222;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: .75;
+}
+.navbar-brand a:hover, .navbar-brand a:focus  {
+    text-decoration: none;
+}
 
+.navbar-brand p { /*Kosher cert*/
+    color: #000;
+    text-transform: uppercase;
+    font-size: .7em;
+    margin-top: 15px;
+}
+
+.navbar-brand p span {  /*Star-k*/
+    vertical-align: middle;
+}
 section {
     margin:0;
     padding:0;
